[package]
name = "dcm_findler"
version = "0.1.0"
authors = ["Matkin Alexandr <mae664128@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicli = "0.4.0"
structopt = "0.3.21"
walkdir = "2.3.1"
rayon = "1.5.0"
indicatif = { version = "*", features = ["rayon"] }
dicom = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
smallvec = "1.6.1"

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]